--- a/frontend/src/i18n/locales/zh_cn/translations.json
+++ b/frontend/src/i18n/locales/zh_cn/translations.json
@@ -193,7 +193,7 @@
       "leads": "潜在客户",
       "sales-order": "销售订单",
       "sales-invoice": "销售发票",
-      "cod-manager": "COD 经理",
+      "manager": "经理",
       "sales-agent": "销售代理"
     },
     "settings": {
