--- a/frontend/src/i18n/locales/ar/translations.json
+++ b/frontend/src/i18n/locales/ar/translations.json
@@ -193,7 +193,7 @@
       "leads": "الفرص",
       "sales-order": "أمر البيع",
       "sales-invoice": "فاتورة البيع",
-      "cod-manager": "مدير COD",
+      "manager": "مدير COD",
       "sales-agent": "وكيل المبيعات"
     },
     "settings": {
