--- a/frontend/src/i18n/locales/en/translations.json
+++ b/frontend/src/i18n/locales/en/translations.json
@@ -6,11 +6,12 @@
     },
     "sales": {
       "sales": "Sales",
-      "leads": "Leads",
+      "customers": "Customers",
+      "land-owners": "Land Owners",
       "sales-invoice": "Sales Invoice",
       "approval": "Approval",
       "sales-manager": "Sales Manager",
-      "sales-agent": "Sales Agent"
+      "sales-agent": "Broaker"
     },
     "settings": {
       "settings": "Settings",
