--- a/frontend/src/i18n/locales/en/translations.json
+++ b/frontend/src/i18n/locales/en/translations.json
@@ -7,6 +7,7 @@
     "sales": {
       "sales": "Sales",
       "customers": "Customers",
+      "legal": "Legal",
       "land-owners": "Land Owners",
       "sales-invoice": "Sales Invoice",
       "approval": "Approval",
