--- a/frontend/src/i18n/locales/en/translations.json
+++ b/frontend/src/i18n/locales/en/translations.json
@@ -8,6 +8,7 @@
       "sales": "Sales",
       "customers": "Customers",
       "legal": "Legal",
+      "legal-plot": "Legal Plot",
       "land-owners": "Land Owners",
       "sales-invoice": "Sales Invoice",
       "approval": "Approval",
